force-app/main/default/objects/Procedimento__c/Procedimento__c.object-meta.xml
<CustomObject>
    <label>Procedimento</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedimentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>