force-app/main/default/objects/Procedimento__c/fields/Corrente_de_fulga_da_parte_aplicad__c.field-meta.xml
<CustomField>
    <fullName>Corrente_de_fulga_da_parte_aplicad__c</fullName>
    <description>Corrente de fulga da parte aplicada - Aprovado?</description>
    <inlineHelpText>Corrente de fulga da parte aplicada - Aprovado?</inlineHelpText>
    <label>Corrente de fulga da parte aplicad...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>