force-app/main/default/objects/Procedimento__c/fields/Corrente_de_fulga_do_equipamento_Ap__c.field-meta.xml
<CustomField>
    <fullName>Corrente_de_fulga_do_equipamento_Ap__c</fullName>
    <description>Corrente de fulga do equipamento - Aprovado?</description>
    <inlineHelpText>Corrente de fulga do equipamento - Aprovado?</inlineHelpText>
    <label>Corrente de fulga do equipamento - Ap...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>