force-app/main/default/objects/Procedimento__c/fields/dataDeValidade__c.field-meta.xml
<CustomField>
    <fullName>dataDeValidade__c</fullName>
    <label>Data de Validade</label>
    <type>Date</type>
</CustomField>