force-app/main/default/objects/Procedimento__c/fields/dataDoTse__c.field-meta.xml
<CustomField>
    <fullName>dataDoTse__c</fullName>
    <label>Data do TSE</label>
    <type>Date</type>
</CustomField>