force-app/main/default/objects/Procedimento__c/fields/Defici_ncia_detectada_mas_sem_risco__c.field-meta.xml
<CustomField>
    <fullName>Defici_ncia_detectada_mas_sem_risco__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deficiência detectada, mas sem risco direto para continuar a utilização clínica. Correção é necessária.</inlineHelpText>
    <label>Deficiência detectada, mas sem risco...</label>
    <type>Checkbox</type>
</CustomField>