force-app/main/default/objects/Procedimento__c/fields/descricao__c.field-meta.xml
<CustomField>
    <fullName>descricao__c</fullName>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>