force-app/main/default/objects/Procedimento__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <inlineHelpText>Botão de ligar acionando e equipamento inicializando corretamente?</inlineHelpText>
    <label>Botão de ligar acionando e equipament...</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>