force-app/main/default/objects/Procedimento__c/fields/Local_de_execucao__c.field-meta.xml
<CustomField>
    <fullName>Local_de_execucao__c</fullName>
    <label>Local de execução</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospcom</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>