force-app/main/default/objects/Procedimento__c/fields/Nao_possui__c.field-meta.xml
<CustomField>
    <fullName>Nao_possui__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não possui</label>
    <type>Checkbox</type>
</CustomField>