force-app/main/default/objects/Procedimento__c/fields/Nenhuma_defici_ncia_funcional_ou_de_s__c.field-meta.xml
<CustomField>
    <fullName>Nenhuma_defici_ncia_funcional_ou_de_s__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Nenhuma deficiência funcional ou de segurança foi detectada</inlineHelpText>
    <label>Nenhuma deficiência funcional ou de s...</label>
    <type>Checkbox</type>
</CustomField>