force-app/main/default/objects/Procedimento__c/fields/Numero_de_certifica_o__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_certifica_o__c</fullName>
    <label>Número de certificação</label>
    <length>50</length>
    <type>Text</type>
</CustomField>