force-app/main/default/objects/Procedimento__c/fields/numeroDeSerie__c.field-meta.xml
<CustomField>
    <fullName>numeroDeSerie__c</fullName>
    <label>Nº de Série</label>
    <length>80</length>
    <type>Text</type>
</CustomField>