force-app/main/default/objects/Procedimento__c/fields/ordemDeTrabalho__c.field-meta.xml
<CustomField>
    <fullName>ordemDeTrabalho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Procedimentos</relationshipLabel>
    <relationshipName>Procedimentos</relationshipName>
    <type>Lookup</type>
</CustomField>