force-app/main/default/objects/Procedimento__c/fields/Os_acionamentos_luminosos_do_equipame__c.field-meta.xml
<CustomField>
    <fullName>Os_acionamentos_luminosos_do_equipame__c</fullName>
    <inlineHelpText>Os acionamentos luminosos do equipamento estão todos funcionando?</inlineHelpText>
    <label>Os acionamentos luminosos do equipame...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>