force-app/main/default/objects/Procedimento__c/fields/PADR_ES_DE_TESTE__c.field-meta.xml
<CustomField>
    <fullName>PADR_ES_DE_TESTE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PADRÕES DE TESTE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Categoria_Patrimonial__c</field>
            <operation>equals</operation>
            <value>INSTRUMENTOS DE MEDIÇÃO E ENSAIO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Procedimentos</relationshipLabel>
    <relationshipName>Procedimentos</relationshipName>
    <type>Lookup</type>
</CustomField>