force-app/main/default/objects/Procedimento__c/fields/Resist_ncia_de_isola_o_Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Resist_ncia_de_isola_o_Aprovado__c</fullName>
    <inlineHelpText>Resistência de isolação - Aprovado?</inlineHelpText>
    <label>Resistência de isolação - Aprovado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>