force-app/main/default/objects/Procedimento__c/fields/tecnico__c.field-meta.xml
<CustomField>
    <fullName>tecnico__c</fullName>
    <label>técnico</label>
    <length>50</length>
    <type>Text</type>
</CustomField>