force-app/main/default/objects/Procedimento__c/fields/Tecnico_Executor__c.field-meta.xml
<CustomField>
    <fullName>Tecnico_Executor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Técnico Executor</relationshipLabel>
    <relationshipName>Procedimentos</relationshipName>
    <type>Lookup</type>
</CustomField>