force-app/main/default/objects/Procedimento__c/fields/Tela_sens_vel_ao_toque_e_ou_bot_es_de__c.field-meta.xml
<CustomField>
    <fullName>Tela_sens_vel_ao_toque_e_ou_bot_es_de__c</fullName>
    <inlineHelpText>Tela sensível ao toque e/ou botões de comando estão acionando corretamente?</inlineHelpText>
    <label>Tela sensível ao toque e/ou botões de...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>