force-app/main/default/objects/Procedimento__c/fields/Validade__c.field-meta.xml
<CustomField>
    <fullName>Validade__c</fullName>
    <formula>dataDoTse__c   + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validade</label>
    <type>Date</type>
</CustomField>