force-app/main/default/objects/Procedimento__c/fields/Valor_da_se_o_7__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_se_o_7__c</fullName>
    <label>Valor da seção 7</label>
    <type>TextArea</type>
</CustomField>