force-app/main/default/objects/Procedimento__c/fields/valor_da_secao_6__c.field-meta.xml
<CustomField>
    <fullName>valor_da_secao_6__c</fullName>
    <inlineHelpText>Qual o valora da CLASSE/TIPO selecionada</inlineHelpText>
    <label>Valor da seção 6</label>
    <type>TextArea</type>
</CustomField>