force-app/main/default/objects/Procedimento__c/fields/Valor_da_secao_8__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_secao_8__c</fullName>
    <label>Valor da seção 8</label>
    <type>TextArea</type>
</CustomField>