force-app/main/default/objects/Procedimento__c/fields/valor_do_secao_6__c.field-meta.xml
<CustomField>
    <fullName>valor_do_secao_6__c</fullName>
    <label>valor do seção 7</label>
    <type>TextArea</type>
</CustomField>