force-app/main/default/objects/Procedimento__c/fields/X1_Classe_de_Prote_o_de_Isolamento__c.field-meta.xml
<CustomField>
    <fullName>X1_Classe_de_Prote_o_de_Isolamento__c</fullName>
    <inlineHelpText>(CLASSE I): Isolação básica mais conexão para aterramento.        .
(CLASSE II): Isolação dupla ou reforçada, sem provisão de ponto para aterramento.       .</inlineHelpText>
    <label>1 - Classe de Proteção de Isolamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLASSE I</fullName>
            </value>
            <value>
                <fullName>CLASSE II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>