force-app/main/default/objects/Procedimento__c/fields/X2_Tipo_da_Parte_Aplicada__c.field-meta.xml
<CustomField>
    <fullName>X2_Tipo_da_Parte_Aplicada__c</fullName>
    <description>()</description>
    <inlineHelpText>(TIPO B): Equipamento aterrado.                                                                                                                                             
(TIPO BF): Equipamento aterrado e parte aplicada isolada do terra.                                                                                             
(Tipo CF): Grau de proteção superior com parte aplicada isolada do terra.</inlineHelpText>
    <label>2 - Tipo da Parte Aplicada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não possui</fullName>
            </value>
            <value>
                <fullName>Tipo B</fullName>
            </value>
            <value>
                <fullName>Tipo BF</fullName>
            </value>
            <value>
                <fullName>Tipo CF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>