force-app/main/default/objects/Procedimento__c/fields/X3_Conex_o_com_a_Rede_El_trica__c.field-meta.xml
<CustomField>
    <fullName>X3_Conex_o_com_a_Rede_El_trica__c</fullName>
    <inlineHelpText>(PIE): Equipamento permanentemente instalado.                                                                                                                          
(NPS): Cabo de alimentação não destacável, fixo no equipamento.                                                                                               
(DPS): Cabo de alimentação destacável, removível do equipamento.</inlineHelpText>
    <label>3 - Conexão com a Rede Elétrica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIE</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>