force-app/main/default/objects/Procedimento__c/fields/X4_Lista_de_Acess_rios__c.field-meta.xml
<CustomField>
    <fullName>X4_Lista_de_Acess_rios__c</fullName>
    <label>4 - Lista de Acessórios</label>
    <type>TextArea</type>
</CustomField>