force-app/main/default/objects/Procedimento__c/fields/X6_Resist_ncia_de_Aterramento_del__c.field-meta.xml
<CustomField>
    <fullName>X6_Resist_ncia_de_Aterramento_del__c</fullName>
    <inlineHelpText>1- EQUIPAMENTO NÃO DESCONECTÁVEL DA REDE
FIGURA 2 (NBR IEC 62353) - MENOR IGUAL A 500 mΩ
2-EQUIPAMENTO DESCONECTÁVEL DA REDE
FIGURA 1 (NBR IEC 62353) - MENOR IGUAL A 300 mΩ</inlineHelpText>
    <label>6 - Resistência de Aterramento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUIPAMENTO NÃO DESCONECTÁVEL DA REDE FIGURA 2 -  ≤ 500 mΩ</fullName>
                <label>EQUIPAMENTO NÃO DESCONECTÁVEL DA REDE FIGURA 2 -  ≤ 500</label>
            </value>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>