force-app/main/default/objects/Procedimento__c/fields/X7_Resist_ncia_de_Isolamento__c.field-meta.xml
<CustomField>
    <fullName>X7_Resist_ncia_de_Isolamento__c</fullName>
    <label>7 - Resistência de Isolamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-NBR IEC 62353 - FIGURA 3.1 (CLASSE I) 2 (MΩ)</fullName>
                <label>1-NBR IEC 62353 - FIGURA 3.1 (CLASSE I)  ≥ 2 (MΩ)</label>
            </value>
            <value>
                <fullName>2-NBR IEC 62353 - FIGURA 3.2 (CLASSE I/CLASSE II) ≥ 7 (MΩ)</fullName>
            </value>
            <value>
                <fullName>3-NBR IEC 62353 - FIGURA 4 - TIPO B (CLASSE I) ≥ 2 (MΩ)</fullName>
            </value>
            <value>
                <fullName>4-NBR IEC 62353 - FIGURA 4 - TIPO B (CLASSE II) ≥ 7 (MΩ)</fullName>
            </value>
            <value>
                <fullName>5-NBR IEC 62353 - FIGURA 4 - TIPO F (CLASSE I/CLASSE II) ≥ 70 (MΩ)</fullName>
                <label>5-NBR IEC 62353 - FIGURA 4 - TIPO F (CLASSE I/CLASSE II) ≥  70 (MΩ)</label>
            </value>
            <value>
                <fullName>6-NBR IEC 62353 - FIGURA 5 - TIPO F (CLASSE I/CLASSE II)  ≥ 70 (MΩ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>