force-app/main/default/objects/Procedimento__c/fields/X8_Corrente_de_Fuga_do_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>X8_Corrente_de_Fuga_do_Equipamento__c</fullName>
    <label>8 - Corrente de Fuga do Equipamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1- MÉTODO DIRETO OU DIFERENCIAL FIG.7/8-CLASSE I(B/BF/CF) ≤ 500(µA)</fullName>
            </value>
            <value>
                <fullName>2- MÉTODO DIRETO OU DIFERENCIAL FIG. 7/8-CLASSE II(B/BF/CF) ≤ 100(µA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>