force-app/main/default/objects/Procedimento__c/fields/X9_Corrente_de_Fuga_da_Parte_Aplicada__c.field-meta.xml
<CustomField>
    <fullName>X9_Corrente_de_Fuga_da_Parte_Aplicada__c</fullName>
    <label>9 - Corrente de Fuga da Parte Aplicada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MÉTODO DIRETO FIGURA 10/11CLASSE I/CLASSE II (TIPO BF) MENOR IGUAL A 5000 uA</fullName>
            </value>
            <value>
                <fullName>MÉTODO DIRETO FIGURA 10/11CLASSE I/CLASSE II (TIPO CF) MENOR IGUAL A 50 uA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>