force-app/main/default/objects/Procedimento__c/recordTypes/testeDeSegurancaEletrica.recordType-meta.xml
<RecordType>
    <fullName>testeDeSegurancaEletrica</fullName>
    <active>true</active>
    <label>TSE - TESTE DE SEGURANÇA ELÉTRICA</label>
</RecordType>