force-app/main/default/objects/Procedimento__c/validationRules/regra_seca_11.validationRule-meta.xml
<ValidationRule>
    <fullName>regra_seca_11</fullName>
    <active>true</active>
    <errorConditionFormula>(Nenhuma_defici_ncia_funcional_ou_de_s__c == true &amp;&amp; (Defici_ncia_detectada_mas_sem_risco__c == true ||  Equipamento_deve_ser_retirado_de_func__c  == true ||   Equipamento_n_o_conforme_modifica__c  == true ))</errorConditionFormula>
    <errorMessage>Selecione apenar uma &quot;Deficiência/Nota &quot;</errorMessage>
</ValidationRule>